--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -9,6 +9,11 @@
     containers:
       - name: postgres
         image: postgres:9.4
+        env:
+         - name:POSTGRES_USER
+           value: admin
+          -name: POSTGRES_PASSWORD
+           value: passhere
         ports:
         - containerPort: 5432
 
